--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,24 +1,16 @@
 ---
-import { render } from "astro:content";
 import "../styles/global.css";
 import headshot from "src/assets/headshot.png";
-import type { BlogPost } from "src/util";
 import cwrScriptUrl from "src/assets/scripts/cwr.js?url";
 
 interface Props {
   title: string;
   description: string;
-  blogPost?: BlogPost;
+  openGraphTags?: Record<string, string | string[]>;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-const { title, description, blogPost } = Astro.props;
-
-let lastModified: string | undefined;
-if (blogPost) {
-  const blogPostContent = await render(blogPost);
-  lastModified = blogPostContent.remarkPluginFrontmatter.lastModified;
-}
+const { title, description, openGraphTags } = Astro.props;
 
 const isProd = !import.meta.env.DEV;
 ---
@@ -57,20 +49,16 @@ const isProd = !import.meta.env.DEV;
 <meta property="og:description" content={description} />
 <meta property="og:url" content={canonicalURL} />
 {
-  blogPost ? (
+  openGraphTags ? (
     <>
-      {/* Open Graph Article Meta */}
-      <meta property="og:type" content="article" />
-      <meta property="article:published_time" content={blogPost.date.toString()} />
-      <meta property="article:modified_time" content={lastModified} />
-      <meta property="article:author" content="https://benlimmer.com/about/" />
-      {blogPost.data.tags?.map((tag) => (
-        <meta property="article:tag" content={tag} />
+      {Object.entries(openGraphTags).map(([key, value]) => (
+        Array.isArray(value)
+          ? value.map(v => <meta property={key} content={v} />)
+          : <meta property={key} content={value} />
       ))}
     </>
   ) : (
     <>
-      {/* Open Graph Website Meta */}
       <meta property="og:type" content="website" />
     </>
   )
