fix: main meta description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import BlogPostsSection from "src/components/homepage/BlogPostsSection.astro";
 ---
 
 <Layout
-  description="Ben Limmer is a freelance software engineer and architect based, available for remote projects. Specializing in AI enablement, developer experience, and productivity consulting. Hire Ben for your next software project."
+  description="Ben Limmer is a freelance software engineer and architect available for remote projects. Specializing in AI enablement, developer experience, and productivity consulting. Hire Ben for your next software project."
 >
   <HeroSection />
   <BlogPostsSection />
