--- a/src/components/homepage/BlogPostsSection.astro
+++ b/src/components/homepage/BlogPostsSection.astro
@@ -26,15 +26,15 @@ const posts = (await getCollection("blog"))
             class="absolute inset-0 z-10 rounded-lg focus:outline-none"
             aria-label={`Read post: ${post.data.title}`}
           />
-          <div class="flex flex-col md:w-64 md:max-w-64 md:min-w-64">
-            <h3 class="group-hover:text-primary mb-2 text-xl font-semibold text-blue-300 transition-colors">
+          <div class="flex flex-col">
+            <h3 class="group-hover:text-primary mb-2 text-xl font-semibold break-words text-blue-300 transition-colors">
               {post.data.title}
             </h3>
             <time class="mb-2 text-xs text-white/70" datetime={post.date.toInstant().toString()}>
               {post.date.toLocaleString(undefined, { year: "numeric", month: "long", day: "numeric" })}
             </time>
           </div>
-          <p class="mb-2 text-base text-white/80">{post.data.description}</p>
+          <p class="mb-2 text-base break-words text-white/80">{post.data.description}</p>
         </li>
       ))
     }
