feat: add an about section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "src/layouts/Layout.astro";
 import HeroSection from "src/components/homepage/HeroSection.astro";
+import AboutSection from "src/components/homepage/AboutSection.astro";
 import BlogPostsSection from "src/components/homepage/BlogPostsSection.astro";
 ---
 
@@ -8,5 +9,6 @@ import BlogPostsSection from "src/components/homepage/BlogPostsSection.astro";
   description="Ben Limmer is a freelance software engineer and architect available for remote projects. Specializing in AI enablement, developer experience, and productivity consulting. Hire Ben for your next software project."
 >
   <HeroSection />
+  <AboutSection />
   <BlogPostsSection />
 </Layout>
