--- a/src/components/homepage/HeroSection.astro
+++ b/src/components/homepage/HeroSection.astro
@@ -8,7 +8,7 @@ import SectionDivider from "src/components/ui/SectionDivider.astro";
     <div class="hero-grid-bg h-full w-full"></div>
     <div class="absolute bottom-0 h-1/3 w-full bg-gradient-to-t from-[#101623] to-transparent"></div>
   </div>
-  <div class="relative z-10 flex flex-col items-center px-4 sm:px-6 lg:px-8">
+  <div class="relative z-10 -mt-[10vh] flex flex-col items-center px-4 sm:px-6 md:-mt-[15vh] lg:px-8">
     <h1 class="mb-6 text-center text-6xl font-bold text-white md:text-8xl">
       <span class="md:inline">Hi, I'm</span>
       <span class="mt-2 block md:mt-0 md:inline"
