feat: use partytown for GTM

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -120,8 +120,9 @@ const isProd = !import.meta.env.DEV;
 {
   isProd && (
     <>
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZPYG2J7ECC" />
+      <script async type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-ZPYG2J7ECC" />
       <script
+        type="text/partytown"
         set:html={`
       window.dataLayer = window.dataLayer || [];
       function gtag() {
