--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -7,6 +7,7 @@ import gravatar from "src/assets/gravatar.jpeg";
 import { parseBlogPost } from "src/util";
 import { Temporal } from "temporal-polyfill";
 import TldrSection from "src/components/TldrSection.astro";
+import BugReportSection from "src/components/BugReportSection.astro";
 import { type WithContext, type BlogPosting } from "schema-dts";
 import headshot from "src/assets/headshot.png";
 
@@ -159,8 +160,8 @@ const jsonLd: WithContext<BlogPosting> = {
           }
         </div>
       </nav>
+      <BugReportSection postTitle={post.data.title} postUrl={Astro.url.href} />
       <!-- TODO: add tags -->
-      <!-- TODO: add report bugs -->
     </main>
   </article>
 </Layout>
